# pythonoccutils

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-tests.sh
blender/: .gitignore  blender_visualize_script.py
cpp_libs/solvespace_wrapper/: CMakeLists.txt
cpp_libs/solvespace_wrapper/src/: Allocator.cpp  Allocator.h  allocatable.h  constraint_wrappers.h  entity_wrappers.h  main.cpp  param_wrappers.h  slvs_includes.h  solvespace_wrapper.h  util.h
cpp_libs/vtk_occ_bridge/: CMakeLists.txt  README.md
cpp_libs/vtk_occ_bridge/inc/: vtk_occ_bridge.h
cpp_libs/vtk_occ_bridge/swig/: vtk_occ_bridge.i
docker/: Dockerfile  README.md  docker-compose.yml  docker_build.sh  docker_run.sh
projects/: needle_file_holder.py
src/pythonoccutils/: box_factory.py  constants.py  hole_factory.py  occutils_python.py  part_display.py  part_manager.py  precision.py  stock_parts.py  svg_parser.py
src/pythonoccutils/cad/gui/: render_spec.py  visualization.py
src/pythonoccutils/cad/gui/pyqt/: selection_info.py  utils.py  view_3d.py  window.py  work_unit.py  work_unit_editor.py  work_unit_tree.py
src/pythonoccutils/cad/gui/pyqt/widgets/: scale_widget.py  translate_widget.py  widget_toolbar.py  widgets.py
src/pythonoccutils/cad/gui/vtk/: interaction.py  vtk_occ_bridging.py  vtk_work_plane_view.py
src/pythonoccutils/cad/model/: event.py  session.py  work_unit.py  work_unit_factory.py
src/pythonoccutils/cad/model/workspace/: README.md  work_plane_controller.py  work_plane_model.py  workspace.py
src/pythonoccutils/gears/: gear_generator.py  gears.js  gears_js_translated.py
tst/: extents_test.py  part_factory_test.py  part_query_test.py  part_test.py  test_utils.py  wire_sketcher_test.py
